--- a/gastos-residenciais-server/appsettings.Development.json
+++ b/gastos-residenciais-server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Server=localhost;Database=gerenciamento_de_gastos;Uid=root;Pwd=root;"
   }
 }
