--- a/gastos-residenciais-server/gastos-residenciais-server.csproj
+++ b/gastos-residenciais-server/gastos-residenciais-server.csproj
@@ -26,6 +26,8 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
 	<ProjectReference Include="..\Presentation\Presentation.csproj" />
+	<ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
+	<ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 </Project>
